--- a/index.html
+++ b/index.html
@@ -30,6 +30,137 @@
           </div>
         </div>
       </div>
+      <div class="group-1">
+        <div class="skills">
+          <h3 class="title">
+            Skills
+          </h3>
+          <ul class="skill-lists description">
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>JavaScript</li>
+            <li>React</li>
+            <li>Cloudflare Pages</li>
+            <li>Bootstrap</li>
+            <li>Git</li>
+          </ul>
+        </div>
+        <div class="ref">
+          <h3 class="title">
+            References
+          </h3>
+          <div class="ref_items">
+            <h4 class="ref-name">
+              Emalin
+            </h4>
+            <p class="description">
+              General Manager of Reservoir Engineer
+            </p>
+            <p class="description">Phone no.: 012-3456789</p>
+          </div>
+          <div class="ref-items">
+            <h4 class="ref-name">
+              Najmi
+            </h4>
+            <p class="description">
+              Senior Reservoir Engineer
+            </p>
+            <p class="description">Phone no.: 012-3456789</p>
+          </div>
+        </div>
+        <div class="edu">
+          <h3 class="title">
+            Education
+          </h3>
+          <div class="edu-items">
+            <p class="item-preTitle">
+              2020-2023
+            </p>
+            <h4 class="item-title">
+              MSC in Data Science
+            </h4>
+            <p class="item-subtitle">
+              University Malaya
+            </p>
+          </div> 
+          <div class="edu-item">
+            <p class="item-preTitle">
+              2014-2018
+            </p>
+            <h4 class="item-title">
+              BSC in Petroleum Engineering
+            </h4>
+            <p class="item-subtitle">
+              University of Tulsa
+            </p>
+          </div> 
+        </div>
+        <div class="certification">
+          <h3 class="title">
+            Certification
+          </h3>
+          <div class="certification-item">
+            <p class="item-preTitle">
+              2023
+            </p>
+            <h4 class="item-title">
+              Full Stack Developer
+            </h4>
+            <p class="description">
+              This will be a long text
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="group-2">
+        <div class="exp">
+          <h3 class="title">
+            Experiences
+          </h3>
+          <div class="exp-item">
+            <p class="item-preTitle">
+              2020-2022
+            </p>
+            <h4 class="item-title">
+              Energy Quest Sdn. Bhd.
+            </h4>
+            <p class="item-subtitle">
+              Reservoir Engineer
+            </p>
+            <p class="description">
+              This will be a long description
+            </p>
+          </div>
+        </div>
+        <div class="project">
+          <h3 class="title">
+            Projects
+          </h3>
+          <div class="project-item">
+            <p class="item-preTitle">
+              2018
+            </p>
+            <h4 class="item-title">
+              Junebank
+            </h4>
+            <p class="item-subtitle">
+              This will be a description section
+            </p>
+          </div>
+          <div class="project-item">
+            <p class="item-preTitle">
+              2021
+            </p>
+            <h4 class="item-title">
+              Subnexio
+            </h4>
+            <p class="item-subtitle">
+              This will be a description section
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="group-3"></div>
     </div>
   </body>
 </html>
