--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="widrg=device-width, initial-scale=1.0">
     <title>Resume</title>
     <link rel="stylesheet" href="styles/index.css">
+    <script src="https://unpkg.com/feather-icons"></script>
   </head>
   <body>
     <div class="container">
@@ -159,8 +160,30 @@
             </p>
           </div>
         </div>
+        <div class="interest">
+          <h3 class="title">
+            Interest
+          </h3>
+          <div class="interest-items">
+            <div class="interest-item">
+              <i data-feather="music"></i>
+              <span>Music</span>
+            </div>
+            <div class="interest-item">
+              <i data-feather="shopping-bag"></i>
+              <span>Shopping</span>
+            </div>
+            <div class="interest-item">
+              <i data-feather="monitor"></i>
+              <span>Coding</span>
+            </div>
+          </div>
+        </div>
       </div>
       <div class="group-3"></div>
     </div>
+    <script>
+      feather.replace()
+    </script>
   </body>
 </html>
