--- a/index.html
+++ b/index.html
@@ -180,7 +180,44 @@
           </div>
         </div>
       </div>
-      <div class="group-3"></div>
+      <hr />
+      <div class="group-3">
+        <div class="contact">
+          <h3 class="title">
+            Contact
+          </h3>
+          <div class="contact-info">
+            <p class="description">
+              Kuala Lumpur, Malaysia
+            </p>
+            <p class="description">
+              +013-888 8888
+            </p>
+            <p class="description">
+              naqiu923@gmail.com
+            </p>
+          </div>
+        </div>
+        <div class="socials">
+          <h3 class="title">
+            Socials
+          </h3>
+          <div class="social-items">
+            <a href="#" class="social-item">
+              <i data-feather="github"></i>
+              <span>/Naqo08</span>
+            </a>
+            <a href="#" class="social-item">
+              <i data-feather="twitter" ></i>
+              <span>/Naqo08</span>
+            </a>
+            <a href="#" class="social-item">
+              <i data-feather="linkedin"></i>
+              <span>/Naqo08</span>
+            </a>
+          </div>
+        </div>
+      </div>
     </div>
     <script>
       feather.replace()
